# memory-etch

./: .coveragerc  .gitattributes  .gitignore  BRAND.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  __init__.py
benchmarks/locomo/: __init__.py  evaluate_official.py  loader.py  runner.py
docs/: architecture.md  embedding.md
docs/api/: classifier.md  retrieval.md  store.md
examples/: README.md  hermes_integration.py
openspec/changes/archive/2026-05-24-fix-hrr-dimension-sync/: archive-report.md  proposal.md
plugins/memory/etch/: plugin.yaml
scripts/: amb_adapter.py  backfill_embeddings.py  run_amb_benchmark.py  setup_etch.sh
src/memento/: __init__.py  circuit_breaker.py  curator.py  etch.py  ingest.py  project.py  retrieval.py  viewer.py
src/memento/benchmark/: __init__.py  __main__.py  dataset.py  providers.py  runner.py
src/memento/embedding/: __init__.py  fastembed_provider.py
src/memento/interceptor/: __init__.py  anthropic.py  extract.py  generic.py  openai.py
src/memento/mcp/: __init__.py  __main__.py  server.py
src/memento/plugins/: __init__.py  bge_m3.py
src/memento/store/: __init__.py  _atlas.py  _crud.py  _export_import.py  _gc.py  _hrr.py  _ingest.py  _provenance.py  _schema.py  _search.py  _snapshots.py  _sync.py  _typed_facts.py  _workspaces.py
src/memento/translator_deprecated/: __init__.py  expander.py  extractor.py
src/memory_etch/: __init__.py  classifier.py  curator.py  etch.py  hrr.py  project.py  retrieval.py  store.py  viewer.py
src/memory_etch/benchmark/: __init__.py  __main__.py  judge.py  providers.py  runner.py
src/memory_etch/embedding/: __init__.py  fastembed_provider.py  ollama_provider.py
src/memory_etch/interceptor/: __init__.py  anthropic.py  extract.py  generic.py  openai.py
src/memory_etch/mcp/: __init__.py  __main__.py  server.py
src/memory_etch/plugins/: __init__.py  bge_m3.py
src/memory_etch/store/: __init__.py  _compat.py  _crud.py  _embedding.py  _event_log.py  _export_import.py  _gc.py  _hrr.py  _inbox.py  _ingest.py  _relations.py  _schema.py  _search.py  _sessions.py  _snapshots.py  _sync.py
src/memory_etch/translator/: __init__.py
src/memory_etch/translator_deprecated/: __init__.py  aliases.yaml  formatter.py  normalizer.py
src/plugins/: etch_index.py
tests/: conftest.py  test_atlas.py  test_bge_m3.py  test_breaker_wiring.py  test_ci_coverage_config.py  test_circuit_breaker.py  test_code_quality_tooling.py  test_community_docs.py  test_curator.py  test_data_quality.py  test_docs_readme.py  test_embedding_provider.py  test_etch_contract.py  test_etch_e2e.py  test_etch_migration.py  test_etch_v2.py  test_etch_viewer.py  test_event_log.py  test_eviction.py  test_gc.py  test_graph_nav.py  test_hive_memory.py  test_hrr.py  test_ingest.py  test_interceptor.py  test_locomo_adapter.py  test_mcp.py  test_package_metadata.py  test_persistence_readiness.py  test_progressive_disclosure.py  test_project.py  test_provenance.py  test_query_dsl.py  test_retrieval.py  test_runtime_hardening.py  test_session_summary.py  test_smarter_search.py  test_snapshots.py  test_store.py  test_store_embedding.py  (+4 more)
