[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-etch"
version = "0.2.0"
description = "KISS persistent memory for AI agents — SQLite + FTS5 + HRR vectors"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Hermie Cell", email = "hermie@basiliskode.dev"},
]
keywords = ["memory", "ai", "agent", "sqlite", "fts5", "hrr", "embedding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
hrr = ["numpy>=1.24.0"]
embedding = ["fastembed>=0.5.0"]
bge-m3 = ["fastembed>=0.5.0"]
all = ["memory-etch[hrr]", "memory-etch[bge-m3]"]

[project.urls]
"Homepage" = "https://github.com/Basiliskode/memory-etch"
"Source" = "https://github.com/Basiliskode/memory-etch"

[tool.setuptools.packages.find]
where = ["src"]
include = ["memory_etch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -p no:xdist"
pythonpath = ["src"]

# Tests requiring Hermes Agent are excluded by default:
#   test_etch_e2e.py — EtchMemoryProvider plugin integration
#   test_etch_contract.py — Hermes plugin metadata checks
#   test_etch_migration.py — v3 backward compat with Hermes API
# Run them manually if you have Hermes Agent installed:
#   python -m pytest tests/test_etch_e2e.py tests/test_etch_contract.py tests/test_etch_migration.py
